--- a/HTML e CSS/Página Pessoal/index.html
+++ b/HTML e CSS/Página Pessoal/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/cssIndex.css">
 </head>
 <body>
+<section class="principal">
     <header class="topo">
         <img src="Imagens/Douglas.jpg" alt="Foto de Douglas Vitor" class="foto_Douglas">
         <h1 id="title">Douglas Vitor de Azevedo</h1>
@@ -30,7 +31,7 @@
 <p><b>Curso:</b> Licenciatura em Computação</p>
 <p><b>Instituição:</b> Universidade Estadual do Norte do Paraná - UENP</p>
 <p><b>Cidade:</b> Bandeirantes - PR</p>
-<p><b>Completude:</b>Cursando o 4° ano.</p>
+<p><b>Completude:</b> Cursando o 4° ano.</p>
 </article>
 </section>
 <section class="secao">
@@ -45,7 +46,7 @@
      suporte e atendimento à usuários.</p>
 <p><b><i>Emprego atual.</b></i></p>
 </article>
-<article class="artigo">
+<article class="emprego2">
     <p><b>Empresa:</b> Secretaria Municipal De Saúde De Bandeirantes </p>
     <p><b>Cargo:</b> Estagiário</p>
     <p><b>Data de início:</b> Julho de 2019</p>
@@ -72,6 +73,19 @@
         </li>
 </ul>
 </section>
-
+</section>
+<footer class="formulario">
+    <section class="end">
+    <p><b>Envie-me uma mensagem</p></b>
+    <form>
+	<b>Nome:<input class="nome" type="text" name="nome"></br>
+	E-mail:<input class="email" type="e_mail" name="email"></br>
+	Arquivo:<input class="arquivo" type="file" name="arquivo"></br>
+	<textarea class="comentario" maxlength="200" name="comentario" placeholder="Digite seu comentário aqui..." ></textarea>
+    </b>
+	<input type="button" value="Enviar" name="enviar">
+    </section>
+</form>
+</footer>
 </body>
 </html>
