Atualização div html, imprementação flexbox

--- a/HTML e CSS/Página Pessoal/index.html
+++ b/HTML e CSS/Página Pessoal/index.html
@@ -8,74 +8,73 @@
     <link rel="stylesheet" href="CSS/cssIndex.css">
 </head>
 <body>
-<section class="principal">
-    <header class="topo">
-        <img src="Imagens/Douglas.jpg" alt="Foto de Douglas Vitor" class="foto_Douglas">
-        <h1 id="title">Douglas Vitor de Azevedo</h1>
-    </header>
-<section class="secao">
-    <header>
-        <h2 class="subtitle">Dados pessoais</h2>
-    </header>   
-<article class="artigo">
-<p><b>Idade:</b> 23 anos</p>
-<p><b>Sexo:</b> Masculino</p>
-<p><b>Cidade:</b> Bandeirantes - PR</p>
-</article>
-</section>
-<section class="secao">
-    <header>
-        <h2 class="subtitle">Formação Acadêmica </h2>
-    </header>    
-<article class="artigo">
-<p><b>Curso:</b> Licenciatura em Computação</p>
-<p><b>Instituição:</b> Universidade Estadual do Norte do Paraná - UENP</p>
-<p><b>Cidade:</b> Bandeirantes - PR</p>
-<p><b>Completude:</b> Cursando o 4° ano.</p>
-</article>
-</section>
-<section class="secao">
-    <header>
-        <h2 class="subtitle">Dados Profissionais</h2>
-    </header>
-<article class="artigo">
-<p><b>Empresa:</b> Universidade Estadual do Norte do Paraná - UENP </p>
-<p><b>Cargo:</b> Estagiário</p>
-<p><b>Data de início:</b> Setembro de 2021</p>
-<p><b>Descrição:</b> Manutenção de computadores, manutenção e instalação de rede de internet,
-     suporte e atendimento à usuários.</p>
-<p><b><i>Emprego atual.</b></i></p>
-</article>
-<article class="emprego2">
-    <p><b>Empresa:</b> Secretaria Municipal De Saúde De Bandeirantes </p>
-    <p><b>Cargo:</b> Estagiário</p>
-    <p><b>Data de início:</b> Julho de 2019</p>
-    <p><b>Data de saída:</b> Julho de 2021</p>
-    <p><b>Descrição:</b> Auxiliava na manutenção de computadores e redes, 
+<div class="principal">
+        <div class="topo">
+            <img src="Imagens/Douglas.jpg" alt="Foto de Douglas Vitor" class="foto_Douglas">
+         <h1 id="title">Douglas Vitor de Azevedo</h1>
+        </div>
+    <div class="secao">
+        <div>
+         <h2 class="subtitle">Dados pessoais</h2>
+        </div>   
+        <article class="artigo">
+            <p><b>Idade:</b> 23 anos</p>
+            <p><b>Sexo:</b> Masculino</p>
+            <p><b>Cidade:</b> Bandeirantes - PR</p>
+        </article>
+    </div>
+    <div class="secao">
+        <div>
+            <h2 class="subtitle">Formação Acadêmica </h2>
+        </div>    
+        <article class="artigo">
+        <p><b>Curso:</b> Licenciatura em Computação</p>
+        <p><b>Instituição:</b> Universidade Estadual do Norte do Paraná - UENP</p>
+        <p><b>Cidade:</b> Bandeirantes - PR</p>
+        <p><b>Completude:</b> Cursando o 4° ano.</p>
+        </article>
+    </div>
+    <div class="secao">
+        <div>
+            <h2 class="subtitle">Dados Profissionais</h2>
+        </div>
+    <article class="artigo">
+        <p><b>Empresa:</b> Universidade Estadual do Norte do Paraná - UENP </p>
+        <p><b>Cargo:</b> Estagiário</p>
+        <p><b>Data de início:</b> Setembro de 2021</p>
+        <p><b>Descrição:</b> Manutenção de computadores, manutenção e instalação de rede de internet,
+        suporte e atendimento à usuários.</p>
+        <p><b><i>Emprego atual.</b></i></p>
+    </article>
+    <article class="emprego2">
+        <p><b>Empresa:</b> Secretaria Municipal De Saúde De Bandeirantes </p>
+        <p><b>Cargo:</b> Estagiário</p>
+        <p><b>Data de início:</b> Julho de 2019</p>
+        <p><b>Data de saída:</b> Julho de 2021</p>
+        <p><b>Descrição:</b> Auxiliava na manutenção de computadores e redes, 
         alimentação de sistemas, controle de estoque e depósito, criação de planilhas organizadoras 
         e atendimento à pacientes.</p>
-</article>
-
-</section>
-<section class="secao">
-    <header>
-        <h2 class="subtitle">Redes Sociais</h2>
-    </header>
-    <ul>
-        <li>
-            <a href="https://www.linkedin.com/in/douglas-vitor-27aab1197/" target="_blank">LinkedIn</a>
-        </li>
-        <li>
-            <a href="https://github.com/DougVTR" target="_blank">GitHub</a>
-        </li>
-        <li>
-            <a href="https://www.instagram.com/dougvtr/" target="_blank">Instagram</a>
-        </li>
-</ul>
-</section>
-</section>
+    </article>
+    </div>
+    <div class="secao">
+        <div>
+            <h2 class="subtitle">Redes Sociais</h2>
+        </div>
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/douglas-vitor-27aab1197/" target="_blank">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://github.com/DougVTR" target="_blank">GitHub</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/dougvtr/" target="_blank">Instagram</a>
+            </li>
+        </ul>
+    </div>
+</div>
 <footer class="formulario">
-    <section class="end">
+    <div class="end">
     <p><b>Envie-me uma mensagem</p></b>
     <form>
 	<b>Nome:<input class="nome" type="text" name="nome"></br>
@@ -84,7 +83,7 @@
 	<textarea class="comentario" maxlength="500" name="comentario" placeholder="Digite seu comentário aqui..." ></textarea>
     </b>
 	<input type="button" value="Enviar" name="enviar">
-    </section>
+    </div>
 </form>
 </footer>
 </body>
